style.css
*, ::after, ::before {
  box-sizing: border-box;

}

html, body{

    font-size: 16px;
   background-color: whitesmoke;
    margin: 0px;  
    
}

header{
    border-bottom-style: ridge;
    background-color: white;

}
.main{
    margin-top: 35px;
    margin-left: 33px;
    padding-left: 0px;
}
form h2{
    color: rgb(70, 182, 145);
    padding: 30px 0px 30px 0px;
    border-bottom-style: ridge;
    margin-bottom: 30px;
}
.contact
{
    max-width: 50%;
    margin-top: 20px;
    background-color: white;
    margin-left: 0px;
    margin-bottom: 20px;
    padding-bottom: 20px;
   
}
.h1 {
  background-color: rgb(70, 182, 145);
 
  color: white;
  text-align: center;
  padding: 13px;
  margin-left: 33px;
  margin-bottom: 0;
}
li {
  align-items: center;
  display: flex;
}


@media only screen and (max-width:600px) {
  .center{
    margin-left: 0px;
    justify-content: center;
  }
  #abcd{
    max-width: 100%;
}
#floatLeft{
    float: left;
}

}

@media only screen and (min-width: 601px) {
  .end {
    justify-content: flex-end;
  }
}

.input{
    background-color: rgb(70, 182, 145);
    border-color: rgb(70, 182, 145);

}

body, .sticky-footer-wrapper {
  min-height:50vh;
}

.flex-fill {
  flex:1 1 auto;
}

.aboutMe{
    max-width: 50%;
    max-height: 240px;
    float: left;
    margin-right: 20px;
}
.aboutCard{
    background-color: white;
    border: lemonchiffon solid 2px;
}

.abouth2{
    padding-left: 20px;
    padding-bottom: 20px;
    border-bottom: solid;
}

